objects/copado1p__Platform_Job__c.object
<CustomObject>
    <description>This object defines the Job that Copado 1 Platform can run</description>
    <fields>
        <fullName>copado1p__Branch__c</fullName>
        <description>The branch of the defined repository where copado_start.sh should exist</description>
        <inlineHelpText>The branch of the defined repository where copado_start.sh should exist</inlineHelpText>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado1p__Description__c</fullName>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>copado1p__Git_Repository__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Git Repository record where external code is.</description>
        <inlineHelpText>Git Repository record where external code is.</inlineHelpText>
        <label>Git Repository</label>
        <referenceTo>copado__Git_Repository__c</referenceTo>
        <relationshipLabel>Platform Jobs</relationshipLabel>
        <relationshipName>Platform_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado1p__Last_Job_Run__c</fullName>
        <label>Last Job Run</label>
        <summarizedField>copado1p__Platform_Job_Execution__c.copado1p__Start_Date__c</summarizedField>
        <summaryForeignKey>copado1p__Platform_Job_Execution__c.copado1p__Platform_Job__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>copado1p__VM_Provider__c</fullName>
        <description>Virtual Machine Provider, the external platform where VM will be initialised and Job will be executed.</description>
        <inlineHelpText>Virtual Machine Provider, the external platform where VM will be initialised and Job will be executed.</inlineHelpText>
        <label>VM Provider</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>copado1p__VM_Providers</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado1p__VM_Type__c</fullName>
        <description>Virtual Machine Type, in Heroku: Dyno Type</description>
        <inlineHelpText>Virtual Machine Type, in Heroku: Dyno Type</inlineHelpText>
        <label>VM Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>copado1p__VM_Provider__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>copado1p__VM_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado1p__isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether this job may be run. Inactive jobs will not be executed.</description>
        <inlineHelpText>Determines whether this job may be run. Inactive jobs will not be executed.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Platform Job</label>
    <listViews>
        <fullName>My_Platform_Jobs</fullName>
        <columns>NAME</columns>
        <columns>copado1p__Last_Job_Run__c</columns>
        <columns>copado1p__Branch__c</columns>
        <columns>copado1p__VM_Provider__c</columns>
        <columns>copado1p__VM_Type__c</columns>
        <columns>copado1p__isActive__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Platform Jobs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>copado1p__All</fullName>
        <columns>NAME</columns>
        <columns>copado1p__isActive__c</columns>
        <columns>copado1p__Last_Job_Run__c</columns>
        <columns>copado1p__VM_Type__c</columns>
        <columns>copado1p__Git_Repository__c</columns>
        <columns>copado1p__Branch__c</columns>
        <columns>copado1p__Description__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Platform Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Platform Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>